# nba_app

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  alembic.ini  config.py  requirements.txt
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: 001_fix_numeric_types_and_add_indexes.py  305401598745_add_predictions_table.py
backend/api/: cache.py  main.py
backend/api/models/: schemas.py
backend/api/routes/: chat.py  gamelogs.py  games.py  players.py  predictions.py  (+3 more)
backend/database/: models.py  session.py
backend/services/: prediction_engine.py
docs/: CLEANUP_SUMMARY.md  DATA_ARCHITECTURE.md  HOURLY_UPDATE_SETUP.md  IMPROVEMENTS.md  SAMPLE_ENDPOINTS.md  SETUP_GUIDE.md
docs/architecture/: GAMELOG_COMPREHENSIVE_DESIGN.md
docs/chatbot/: CHATBOT_FAST_PATH.md  CHATBOT_QUERY_PLANNING.md  CHATBOT_SEASON_FILTERING_AND_MAXIMUM_RESPONSE.md  CHATBOT_SMART_PARSING.md
docs/features/: GAME_PREVIEW_FEATURE.md  GAME_PREVIEW_SUMMARY.md  PREDICTIONS_METHODOLOGY.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: __init__.py  cron_setup.sh
scripts/analysis/: prediction_enhanced.py  prediction_poc.py  prediction_vegas_plus.py
scripts/database/: add_scores_to_team_boxscores.py  create_db.py  optimize_db.py
scripts/ingestion/: README.md  fetch_all_historical_props.py  fetch_all_props.py  fetch_game_odds.py  fetch_historical_props.py  fetch_player_props.py  fetch_upcoming_games_and_props.py  hourly_update.py
sql/: add_indexes.sql  create_season_stats_cache.sql  optimize_database.sh
(+21 files in other folders)
