[project]
name = "nba-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
